service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service
  namespace: latihan
spec:
  selector:
    app: hello-world
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80  
  type: ClusterIP
  # type: NodePort
  # type: LoadBalancer
